# fold-debounce-conduit

./: .gitignore  .travis.yml  ChangeLog.md  README.md  fold-debounce-conduit.cabal  stack.yaml
.github/workflows/: haskell-ci.yml  haskell.yml
eg/: Synopsis.hs
freezes/: 20221124-ghc-9.2.5.freeze
src/Data/Conduit/: FoldDebounce.hs
test/Data/Conduit/: FoldDebounceSpec.hs
