name:                   fold-debounce-conduit
version:                0.2.0.7
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Regulate input traffic from conduit Source with Control.FoldDebounce
description:            Regulate input traffic from conduit Source with Control.FoldDebounce. See "Data.Conduit.FoldDebounce"
category:               Conduit
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/fold-debounce-conduit
bug-reports:            https://github.com/debug-ito/fold-debounce-conduit/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  exposed-modules:      Data.Conduit.FoldDebounce
  -- other-modules:
  default-extensions:   FlexibleContexts
  build-depends:        base,
                        conduit,
                        fold-debounce,
                        resourcet,
                        stm,
                        transformers,
                        transformers-base,

-- executable fold-debounce-conduit
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  other-modules:        Data.Conduit.FoldDebounceSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base, fold-debounce-conduit, stm,
                        conduit, transformers, resourcet,
                        hspec

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/fold-debounce-conduit.git
