name:                   fold-debounce-conduit
version:                0.2.0.8
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Regulate input traffic from conduit Source with Control.FoldDebounce
description:            Regulate input traffic from conduit Source with Control.FoldDebounce. See "Data.Conduit.FoldDebounce"
category:               Conduit
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md
extra-doc-files:        ChangeLog.md
homepage:               https://github.com/debug-ito/fold-debounce-conduit
bug-reports:            https://github.com/debug-ito/fold-debounce-conduit/issues

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  exposed-modules:      Data.Conduit.FoldDebounce
  -- other-modules:
  default-extensions:   FlexibleContexts
  build-depends:        base ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0 || ^>=4.21.0,
                        conduit ^>=1.3.6,
                        fold-debounce ^>=0.2.0,
                        resourcet ^>=1.3.0,
                        stm ^>=2.5.0,
                        transformers ^>=0.5.6 || ^>=0.6.1,
                        transformers-base ^>=0.4.6

-- executable fold-debounce-conduit
--   default-language:     Haskell2010
--   hs-source-dirs:       src
--   main-is:              Main.hs
--   ghc-options:          -Wall
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:        base >=4 && <5

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  other-modules:        Data.Conduit.FoldDebounceSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0 || ^>=4.21.0,
                        fold-debounce-conduit,
                        stm ^>=2.5.0,
                        conduit ^>=1.3.6,
                        transformers ^>=0.5.6 || ^>=0.6.1,
                        resourcet ^>=1.3.0,
                        hspec ^>=2.11.12

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/fold-debounce-conduit.git
